[gd_scene load_steps=17 format=2]

[ext_resource path="res://NotoSerifCJKtc-Black.otf" type="DynamicFontData" id=1]
[ext_resource path="res://leader_board.gd" type="Script" id=2]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/排行榜底圖一版-s.png-dd1bac76b3ee1eb4be89dcd6ae949abd.stex"

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/關閉按鈕一版.png-0877cc0f427a3e02d4fee65289d0c79e.stex"

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/個人團體排行榜切換按鈕一版.png-8ab5fe49a32cc918971d0f9327af00c4.stex"

[sub_resource type="DynamicFont" id=4]
size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 5
font_data = ExtResource( 1 )

[node name="leader_board" type="Sprite"]
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 174.561, 87.7951 )
scale = Vector2( 0.431958, 0.431958 )
texture = SubResource( 1 )

[node name="close" type="TextureButton" parent="."]
margin_left = 226.0
margin_top = 15.0
margin_right = 237.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_picture" type="Sprite" parent="."]
position = Vector2( 232.97, 19.5998 )
scale = Vector2( 0.584248, 0.584248 )
texture = SubResource( 2 )

[node name="switch" type="TextureButton" parent="."]
margin_left = 222.0
margin_top = 123.0
margin_right = 235.0
margin_bottom = 134.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="switch_picture" type="Sprite" parent="."]
position = Vector2( 227.93, 127.169 )
scale = Vector2( 0.687852, 0.687852 )
texture = SubResource( 3 )

[node name="person_text" type="Sprite" parent="."]
visible = false

[node name="first" type="Label" parent="person_text"]
margin_left = 151.749
margin_top = 35.0
margin_right = 213.749
margin_bottom = 43.0
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="second" type="Label" parent="person_text"]
margin_left = 152.0
margin_top = 48.0
margin_right = 192.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 5 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="third" type="Label" parent="person_text"]
margin_left = 153.0
margin_top = 60.0
margin_right = 193.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 6 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="four" type="Label" parent="person_text"]
margin_left = 151.704
margin_top = 73.7916
margin_right = 191.704
margin_bottom = 81.7916
custom_fonts/font = SubResource( 7 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="five" type="Label" parent="person_text"]
margin_left = 152.827
margin_top = 86.5272
margin_right = 192.827
margin_bottom = 94.5272
custom_fonts/font = SubResource( 8 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="six" type="Label" parent="person_text"]
margin_left = 153.202
margin_top = 99.6374
margin_right = 193.202
margin_bottom = 107.637
custom_fonts/font = SubResource( 9 )
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seven" type="Label" parent="person_text"]
margin_left = 152.078
margin_top = 112.249
margin_right = 192.078
margin_bottom = 120.249
custom_fonts/font = SubResource( 10 )
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="eight" type="Label" parent="person_text"]
margin_left = 152.078
margin_top = 122.861
margin_right = 192.078
margin_bottom = 130.861
custom_fonts/font = SubResource( 11 )
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="night" type="Label" parent="person_text"]
margin_left = 152.329
margin_top = 136.346
margin_right = 192.329
margin_bottom = 144.346
custom_fonts/font = SubResource( 12 )
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ten" type="Label" parent="person_text"]
margin_left = 151.329
margin_top = 149.456
margin_right = 191.329
margin_bottom = 157.456
custom_fonts/font = SubResource( 13 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="person_mark" type="Label" parent="person_text"]
margin_left = 223.248
margin_top = 124.236
margin_right = 233.248
margin_bottom = 132.236
custom_fonts/font = SubResource( 14 )
text = "個人"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team_text" type="Sprite" parent="."]

[node name="first" type="Label" parent="team_text"]
margin_left = 151.749
margin_top = 35.0
margin_right = 213.749
margin_bottom = 43.0
custom_fonts/font = SubResource( 4 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="second" type="Label" parent="team_text"]
margin_left = 152.0
margin_top = 48.0
margin_right = 192.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 5 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="third" type="Label" parent="team_text"]
margin_left = 153.0
margin_top = 60.0
margin_right = 193.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 6 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="four" type="Label" parent="team_text"]
margin_left = 151.704
margin_top = 73.7916
margin_right = 191.704
margin_bottom = 81.7916
custom_fonts/font = SubResource( 7 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="five" type="Label" parent="team_text"]
margin_left = 152.827
margin_top = 86.5272
margin_right = 192.827
margin_bottom = 94.5272
custom_fonts/font = SubResource( 8 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="six" type="Label" parent="team_text"]
margin_left = 153.202
margin_top = 99.6374
margin_right = 193.202
margin_bottom = 107.637
custom_fonts/font = SubResource( 9 )
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seven" type="Label" parent="team_text"]
margin_left = 152.078
margin_top = 112.249
margin_right = 192.078
margin_bottom = 120.249
custom_fonts/font = SubResource( 10 )
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="eight" type="Label" parent="team_text"]
margin_left = 152.078
margin_top = 122.861
margin_right = 192.078
margin_bottom = 130.861
custom_fonts/font = SubResource( 11 )
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="night" type="Label" parent="team_text"]
margin_left = 152.329
margin_top = 136.346
margin_right = 192.329
margin_bottom = 144.346
custom_fonts/font = SubResource( 12 )
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ten" type="Label" parent="team_text"]
margin_left = 151.329
margin_top = 149.456
margin_right = 191.329
margin_bottom = 157.456
custom_fonts/font = SubResource( 13 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team_mark" type="Label" parent="team_text"]
margin_left = 223.248
margin_top = 124.236
margin_right = 233.248
margin_bottom = 132.236
custom_fonts/font = SubResource( 14 )
text = "團體"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="switch" to="." method="_on_switch_pressed"]
